2009-06-05  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs: properly look for the 4.0 corlib
	when running on Mono.

2009-06-03  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MetadataResolver.cs: add support for resolving from
	a ModuleReference.

2009-06-03  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs: look for 4.0.0.0 assemblies.

2009-05-21  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs: add support for type forwarders.

2009-05-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/TargetRuntime.cs
	* Mono.Cecil/StructureReader.cs
	* Mono.Cecil.Metadata/MetadataWriter.cs:
		add support for .net 4.0 detection.

2009-04-30  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Signatures/SignatureReader.cs: fix reading out extra mods.

2009-04-21  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/SymbolStoreHelper.cs: look for the assembly in the GAC
	as well if it's not local.

2009-04-03  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Metadata/BlobHeap.cs
	* Mono.Cecil.Metadata/MetadataWriter.cs:
		do a better job at emitting a blob heap.

2009-04-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ModuleDefinition.cs (Import): add overloads
	taking a MethodDefinition as a generic context.

2009-04-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionHelper.cs: throw proper exception
	when importing in an invalid context.

2009-03-12  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AssemblyStripper.cs (PatchHeap): don't crash
	if the assembly doesn't contain a specific metadata heap.

2009-03-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/StructureWriter.cs: properly set the metadata tokens
	of newly emitted modules and assemblies. Fix #480729.

2009-01-28  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MetadataResolver.cs:
		Add new MetadataResolver.

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/TypeReference.cs
	  Mono.Cecil/GenericInstanceMethod.cs